// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartItem Should renders CartItem correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 15,
        "paddingBottom": 12,
        "paddingHorizontal": 16,
        "paddingTop": 30,
      }
    }
  >
    <Image
      alt="image of Test Product product"
      source={
        {
          "uri": "https://example.com/image.jpg",
        }
      }
      style={
        {
          "borderRadius": 10,
          "height": 120,
          "width": 120,
        }
      }
    />
    <View
      style={
        {
          "justifyContent": "space-between",
          "paddingBottom": 10,
          "paddingTop": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "lineHeight": 16,
            },
            {
              "fontFamily": "Montserrat-Medium",
              "fontWeight": "500",
            },
            {
              "color": "#4f4f4f",
            },
            undefined,
          ]
        }
      >
        Test Product
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 14,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 18,
                "lineHeight": 18,
              },
              {
                "fontFamily": "Montserrat-SemiBold",
                "fontWeight": "700",
              },
              {
                "color": "#33907c",
              },
              undefined,
            ]
          }
        >
          $
          90
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 5,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "lineHeight": 16,
                },
                {
                  "fontFamily": "Montserrat-Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#4f4f4f",
                },
                {
                  "textDecorationLine": "line-through",
                },
              ]
            }
          >
            $
            100
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "lineHeight": 16,
                },
                {
                  "fontFamily": "Montserrat-Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#4f4f4f",
                },
                undefined,
              ]
            }
          >
            10
            % off
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "lineHeight": 21,
              },
              {
                "fontFamily": "Montserrat-Medium",
                "fontWeight": "500",
              },
              {
                "color": "#4f4f4f",
              },
              undefined,
            ]
          }
        >
          Qty:
        </Text>
        <View
          style={
            {
              "width": 60,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "opacity": 1,
                "padding": 12,
              }
            }
            testID="single-select-modal"
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "lineHeight": 21,
                  },
                  {
                    "fontFamily": "Montserrat-Medium",
                    "fontWeight": "500",
                  },
                  {
                    "color": "#4f4f4f",
                  },
                  undefined,
                ]
              }
            >
              2
            </Text>
            <RNSVGSvgViewAndroid
              align="xMidYMid"
              bbHeight={4}
              bbWidth={9}
              color="#4f4f4f"
              focusable={false}
              height={4}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 4,
                    "width": 9,
                  },
                ]
              }
              vbHeight={4}
              vbWidth={9}
              width={9}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": -16777216,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  clipRule={0}
                  d="M8.47396 0C8.65786 0 8.74428 0.227303 8.60683 0.349482L4.63287 3.88189C4.5571 3.94925 4.4429 3.94925 4.36713 3.88189L0.393167 0.349482C0.255716 0.227303 0.342136 0 0.52604 0H8.47396Z"
                  fill={
                    {
                      "type": 2,
                    }
                  }
                  fillRule={0}
                  propList={
                    [
                      "fill",
                      "fillRule",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgViewAndroid>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderTopColor": "#dbdbde",
        "borderTopWidth": 0.5,
        "opacity": 1,
        "paddingVertical": 12,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "lineHeight": 16,
          },
          {
            "fontFamily": "Montserrat-Medium",
            "fontWeight": "500",
          },
          {
            "color": "#4f4f4f",
          },
          undefined,
        ]
      }
    >
      Remove
    </Text>
  </View>
</View>
`;

exports[`CartItem Should renders CartItem correctly without actions 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 15,
        "paddingHorizontal": 16,
        "paddingVertical": 25,
      }
    }
  >
    <Image
      alt="image of Test Product product"
      source={
        {
          "uri": "https://example.com/image.jpg",
        }
      }
      style={
        {
          "borderRadius": 10,
          "height": 120,
          "width": 120,
        }
      }
    />
    <View
      style={
        {
          "justifyContent": "space-between",
          "paddingBottom": 10,
          "paddingTop": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "lineHeight": 16,
            },
            {
              "fontFamily": "Montserrat-Medium",
              "fontWeight": "500",
            },
            {
              "color": "#4f4f4f",
            },
            undefined,
          ]
        }
      >
        Test Product
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 14,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 18,
                "lineHeight": 18,
              },
              {
                "fontFamily": "Montserrat-SemiBold",
                "fontWeight": "700",
              },
              {
                "color": "#33907c",
              },
              undefined,
            ]
          }
        >
          $
          90
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 5,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "lineHeight": 16,
                },
                {
                  "fontFamily": "Montserrat-Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#4f4f4f",
                },
                {
                  "textDecorationLine": "line-through",
                },
              ]
            }
          >
            $
            100
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "lineHeight": 16,
                },
                {
                  "fontFamily": "Montserrat-Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#4f4f4f",
                },
                undefined,
              ]
            }
          >
            10
            % off
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "lineHeight": 21,
              },
              {
                "fontFamily": "Montserrat-Medium",
                "fontWeight": "500",
              },
              {
                "color": "#4f4f4f",
              },
              undefined,
            ]
          }
        >
          Qty:
        </Text>
        <View
          style={
            {
              "width": 60,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "opacity": 1,
                "padding": 12,
              }
            }
            testID="single-select-modal"
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "lineHeight": 21,
                  },
                  {
                    "fontFamily": "Montserrat-Medium",
                    "fontWeight": "500",
                  },
                  {
                    "color": "#4f4f4f",
                  },
                  undefined,
                ]
              }
            >
              2
            </Text>
            <RNSVGSvgViewAndroid
              align="xMidYMid"
              bbHeight={4}
              bbWidth={9}
              color="#4f4f4f"
              focusable={false}
              height={4}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 4,
                    "width": 9,
                  },
                ]
              }
              vbHeight={4}
              vbWidth={9}
              width={9}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": -16777216,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  clipRule={0}
                  d="M8.47396 0C8.65786 0 8.74428 0.227303 8.60683 0.349482L4.63287 3.88189C4.5571 3.94925 4.4429 3.94925 4.36713 3.88189L0.393167 0.349482C0.255716 0.227303 0.342136 0 0.52604 0H8.47396Z"
                  fill={
                    {
                      "type": 2,
                    }
                  }
                  fillRule={0}
                  propList={
                    [
                      "fill",
                      "fillRule",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgViewAndroid>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
